pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/pr13746.rkt
#;
(exn:pred #rx"Procedure could not be converted to a predicate")
#lang typed/racket

(define-predicate A? Procedure)

